--- a/e.html
+++ b/e.html
@@ -3,19 +3,17 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <title>E</title>
-        <script src="eve.js" type="text/javascript" charset="utf-8"></script>
+        <script src="eve2.js" type="text/javascript" charset="utf-8"></script>
         <script type="text/javascript">
-            var A = {
-                a: function (a) {
-                    eve(this).fire("whoops", a);
-                }
-            }, f1, f2;
-            eve(A).bind("whoops", f1 = function (e) {alert(e);});
-            A.a(1);
-            eve(A).bind("whoops", f2 = function (e) {alert("second: " + e);});
-            A.a(2);
-            eve(A).unbind("whoops", f1);
-            A.a(3);
+            var f1, f2;
+            eve.on("a.b", f1 = function (e) {alert(e + this);});
+            eve("a", "a", 1);
+            eve.on("a.b.c", f2 = function (e) {alert("second: " + e);});
+            eve("a.b", "b", 2);
+            eve.unbind("a.b.c");
+            
+            eve("blah");
+            eve("a", "c", 2);
         </script>
     </head>
     <body>
