--- a/e.html
+++ b/e.html
@@ -35,7 +35,8 @@
         // I’m hit!
         // Oh, my face!
         log("Take that!");
-        eve("hit/chest/leg/face");
+        // You can use “.” or “/” as delimiter
+        eve("hit.chest.leg");
         // I’m hit!
         // Oh, my chest!
         // Ouch!
@@ -44,7 +45,7 @@
         log("");
         eve.unbind("hit", f3);
         log("Take that!");
-        eve("hit/chest/leg/face");
+        eve("hit.chest.leg");
         // I’m hit!
         // Ouch!
 
@@ -52,10 +53,10 @@
         log("");
         eve.unbind("hit/*");
         log("In your face!");
-        eve("hit/face");
+        eve("hit.face");
         // I’m hit!
         log("Take that!");
-        eve("hit/chest/leg/face");
+        eve("hit.chest.leg");
         // I’m hit!
     </script>
     <pre id="res"></pre>
